# GLES10_Sample

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/gles10_sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  boids.cpp  boids.h  native-lib.cpp
app/src/main/java/com/example/gles10_sample/: MainActivity.kt  MyGLRenderer.kt  MyGLSurfaceView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gles10_sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
